--- a/app/views/games/index.erb
+++ b/app/views/games/index.erb
@@ -1,4 +1,4 @@
-<div id="root"></div>
+<div id="gameOfLife"></div>
 <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
 
 <%= content_for :javascript_area do %>
